# ceda-elasticsearch-tools

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
ceda_elasticsearch_tools/: __init__.py
ceda_elasticsearch_tools/cmdline/: __init__.py  deposit.py  download_index.py  fbs_live_index.py  fbs_missing_files.py  file_on_tape.py  md5.py  nla_sync_es.py  spot_checker.py  update_md5.py
ceda_elasticsearch_tools/cmdline/ceda_eo/: coverage_test.py
ceda_elasticsearch_tools/cmdline/secondary_scripts/: md5.py  nla_sync_lotus_task.py  spot_checker.py
ceda_elasticsearch_tools/config/: config.json
ceda_elasticsearch_tools/core/: log_reader.py  updater.py  util.py  utils.py
ceda_elasticsearch_tools/elasticsearch/: __init__.py  ceda_elasticsearch_client.py
ceda_elasticsearch_tools/index_tools/: __init__.py  base.py  ceda_client.py  ceda_dirs.py  ceda_eo.py  ceda_fbi.py  index_updaters.py
ceda_elasticsearch_tools/root_certificate/: root-ca.pem
ceda_elasticsearch_tools/tests/: conftest.py  index_updater_tests.py  query_tests.py  testQueries.py  test_consistency.py  test_spot_mapping.py
docs/: Makefile  conf.py  index.rst  index_updaters.rst  logreaders.rst
docs/_build/doctrees/: environment.pickle  index.doctree  index_updaters.doctree  logreaders.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  index_updaters.html  logreaders.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index_updaters.rst.txt
elasticsearch_tools/: updater.py
