[project]
name = "ceda-elasticsearch-tools"
version = "2.4.0"
description = "Extension of the basic elasticsearch python wrapper to perform operations with a given ES index."
authors = [
    { name = "Rhys Evans", email = "rhys.evans@stfc.ac.uk"}, 
    { name = "Daniel Westwood", email = "daniel.westwood@stfc.ac.uk"},
    { name = "Neil Massey", email = "neil.massey@stfc.ac.uk"}
]
license = "BSD 3"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
include = [
    { path = "root_certificate/root-ca.pem" }
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)", 
    "docopt (>=0.6.2,<0.7.0)", 
    "elasticsearch (>=7,<8)", 
    "tqdm (>=4.66.5,<5.0.0)", 
    "certifi (>=2024.8.30,<2025.0.0)", 
    "chardet (>=5.2.0,<6.0.0)", 
    "idna (>=3.10,<4.0)", 
    "urllib3 (>=2.2.3,<3.0.0)", 
    "simplejson (>=3.19.3,<4.0.0)", 
    "tabulate (>=0.9.0,<0.10.0)", 
    "setuptools (>=75.2.0,<76.0.0)", 
    "pytest (>=8.3.3,<9.0.0)"
]

[project.urls]
Repository = "https://github.com/cedadev/ceda-elasticsearch-tools.git"

[project.scripts]
nla_sync_es = "ceda_elasticsearch_tools.cmdline.nla_sync_es:main"

nla_sync_lotus_task = "ceda_elasticsearch_tools.cmdline.secondary_scripts.nla_sync_lotus_task:main"

update_md5 = "ceda_elasticsearch_tools.cmdline.update_md5:main"

md5 = "ceda_elasticsearch_tools.cmdline.secondary_scripts.md5:main"

fbs_missing_files = "ceda_elasticsearch_tools.cmdline.fbs_missing_files:main"

spot_checker = "ceda_elasticsearch_tools.cmdline.secondary_scripts.spot_checker:main"

fbs_live_index = "ceda_elasticsearch_tools.cmdline.fbs_live_index:main"

coverage_test = "ceda_elasticsearch_tools.cmdline.ceda_eo.coverage_test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
